@@ -101,12 +101,17 @@ Bar_number_engraver::create_items ()
 }
 
 ADD_TRANSLATOR (Bar_number_engraver,
-		/* doc */ "A bar number is created whenever measurePosition is zero. It is\n"
+		/* doc */ "A bar number is created whenever measurePosition "
+		"is zero and there is a bar line. It is \n"
 		"put on top of all staves, and appears only at  left side of the staff. "
 		"The staves are taken from @code{stavesFound}, which is maintained by "
 		"@code{@ref{Staff_collecting_engraver}}. ",
 
 		/* create */ "BarNumber",
 		/* accept */ "",
-		/* read */ "currentBarNumber stavesFound barNumberVisibility",
+		/* read */
+		"currentBarNumber "
+		"whichBar "
+		"stavesFound "
+		"barNumberVisibility",
 		/* write */ "");
