@@ -1,5 +1,7 @@
 2005-09-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/bar-number-engraver.cc: correct docs.
+
 	* scm/output-lib.scm (first-bar-number-invisible): rename from
 	default-bar-number-visibility
 
